# ReqForge

./: .dockerignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  lints.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  security.yml
apps/cli/: Cargo.toml  README.md
apps/cli/src/: main.rs  output.rs
apps/cli/src/commands/: export.rs  import_.rs  info.rs  list.rs  mock.rs  mod.rs  plugin.rs  run.rs  test.rs  validate.rs
apps/cli/src/reporters/: mod.rs
apps/desktop/: README.md  index.html  package.json  vite.browser.config.ts  vite.config.ts
apps/desktop/src/: App.css  App.tsx  browser.ts
apps/desktop/src-tauri/: Cargo.toml  README-updater.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: keychain.rs  lib.rs  main.rs  oauth.rs
apps/desktop/src/styles/: global.css
e2e/: package.json  playwright.config.ts
e2e/tests/: health.spec.ts
plugins/header-juggler/: Cargo.toml  README.md  plugin.toml
plugins/header-juggler/src/: lib.rs
services/plugins/: Cargo.toml  Dockerfile  registry.json
services/plugins/src/: catalog.rs  main.rs  routes.rs
services/sync/: Cargo.toml  Dockerfile
services/sync/src/: auth.rs  config.rs  db.rs  error.rs  http.rs  main.rs  ws.rs
services/telemetry/: Cargo.toml  Dockerfile
services/telemetry/src/: db.rs  main.rs  routes.rs
web/: README.md  astro.config.mjs  package-lock.json  package.json
web/src/layouts/: Layout.astro
web/src/pages/: docs.astro  index.astro
web/src/pages/docs/: getting-started.astro
