[package]
name = "reqforge-plugins"
version = "0.1.0"
edition = "2021"
description = "Self-hosted plugin marketplace for ReqForge"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
