[package]
name = "reqforge-sync"
version = "0.1.0"
edition = "2021"
publish = false
description = "Self-hosted Y-WebSocket-compatible sync server for ReqForge"

[[bin]]
name = "reqforge-sync"
path = "src/main.rs"

[dependencies]
reqforge-core = { path = "../../packages/core" }

# HTTP / WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1.0"

# Yjs-compatible CRDT (pinned to match reqforge-core)
yrs = "0.27"

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Auth
jsonwebtoken = "9.2"

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
bytes = "1.5"
futures = "0.3"

[lints.rust]
dead_code = "allow"  # service has REST endpoints that may not all be hit at startup

[lints.clippy]
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
