[package]
name = "reqforge"
version = "0.2.0"
description = "ReqForge - Ultimate API Development Platform"
authors = ["ReqForge Team"]
license = "AGPL-3.0"
repository = "https://github.com/reqforge/reqforge"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
reqforge-core = { path = "../../../packages/core" }
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-updater = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
open = "5.4"
keyring = "4.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
